add ali tecent aws cloud interface
